fix: fonts and color scheme revises

--- a/work_phase_3/style_guide.html
+++ b/work_phase_3/style_guide.html
@@ -38,18 +38,17 @@
     <main>
         <div class="container">
             <header class="m-b-8">
-                <h2 class="m-b-4 p-t-4">Style Guide</h2>
-                <h3 class="m-b-6">The Style Guide that are going to be used in the FeedCrumbs Website</h3>
-                <p class="m-b-8">
+                <h1 class="m-b-4 p-t-4">Style Guide</h1>
+                <h3 class="m-b-8">
                     This is the Style Guide for the FeedCrumbs website, focusing on the three levels of design:
                     Visceral, Behavioral, and Reflective.
-                </p>
+                </h3>
             </header>
 
             <section class="design-cards">
                 <article class="design-card m-b-6">
                     <div class="card-header visceral-header">
-                        <h4>Visceral Design</h4>
+                        <p>Visceral Design</p>
                     </div>
                     <div class="card-content p-6">
                         <p class="m-b-4">
@@ -69,7 +68,7 @@
 
                 <article class="design-card m-b-6">
                     <div class="card-header behavioral-header">
-                        <h4>Behavioral Design</h4>
+                        <p>Behavioral Design</p>
                     </div>
                     <div class="card-content p-6">
                         <p class="m-b-4">
@@ -89,7 +88,7 @@
 
                 <article class="design-card m-b-6">
                     <div class="card-header reflective-header">
-                        <h4>Reflective Design</h4>
+                        <p>Reflective Design</p>
                     </div>
                     <div class="card-content p-6">
                         <p class="m-b-4">
