feat: visceral design improvement

--- a/work_phase_3/style_guide.html
+++ b/work_phase_3/style_guide.html
@@ -39,10 +39,10 @@
         <div class="container">
             <header class="m-b-8">
                 <h1 class="m-b-4 p-t-4">Style Guide</h1>
-                <h3 class="m-b-8">
+                <p class="m-b-8">
                     This is the Style Guide for the FeedCrumbs website, focusing on the three levels of design:
                     Visceral, Behavioral, and Reflective.
-                </h3>
+                </p>
             </header>
 
             <section class="design-cards">
