--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -54,7 +54,7 @@
                 </p>
             </header>
 
-            <article class="base-card m-b-12">
+            <section class="base-card m-b-12">
                 <h3 class="m-b-6">Wireframe Gallery</h3>
                 <p class="m-b-8">
                     Below are some wireframe examples that illustrate the layout and structure of key pages and
@@ -113,9 +113,9 @@
 
 
                 </div>
-            </article>
+            </section>
 
-            <article class="base-card m-b-12">
+            <section class="base-card m-b-12">
                 <h2 class="m-b-6">Color Scheme</h2>
                 <p class="m-b-6">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint dignissimos ratione odio laudantium
@@ -130,24 +130,24 @@
                                 <div class="swatch primary-color"></div>
                                 <div class="color-info">
                                     <h5>Primary</h5>
-                                    <p class="color-code">#2c3e50</p>
-                                    <p class="color-usage">Headers, navigation etc</p>
+                                    <p class="color-code">#8B4513</p>
+                                    <p class="color-usage">Major headings, primary buttons, nav highlights</p>
                                 </div>
                             </div>
                             <div class="color-swatch">
                                 <div class="swatch secondary-color"></div>
                                 <div class="color-info">
                                     <h5>Secondary</h5>
-                                    <p class="color-code">#3498db</p>
-                                    <p class="color-usage">Links, buttons etc</p>
+                                    <p class="color-code">#D2691E</p>
+                                    <p class="color-usage">borders, icons, secondary buttons, cards</p>
                                 </div>
                             </div>
                             <div class="color-swatch">
                                 <div class="swatch accent-color"></div>
                                 <div class="color-info">
                                     <h5>Accent</h5>
-                                    <p class="color-code">#e74c3c</p>
-                                    <p class="color-usage">Warnings, alerts etc</p>
+                                    <p class="color-code">#DC143C</p>
+                                    <p class="color-usage">Links, badges, alerts, CTAs, "new" labels, achievements</p>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                                 <div class="color-info">
                                     <h5>Text</h5>
                                     <p class="color-code">#333333</p>
-                                    <p class="color-usage">Body text</p>
+                                    <p class="color-usage">All body text, paragraphs, lists, form labels</p>
                                 </div>
                             </div>
                             <div class="color-swatch">
@@ -169,15 +169,16 @@
                                 <div class="color-info">
                                     <h5>Background</h5>
                                     <p class="color-code">#f5f5f5</p>
-                                    <p class="color-usage">Page background</p>
+                                    <p class="color-usage">Page background, card backgrounds, light sections
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </article>
+            </section>
 
-            <article class="base-card m-b-12 p-b-12">
+            <section class="base-card m-b-12 p-b-12">
                 <h2 class="m-b-6">Typography</h2>
                 <p class="m-b-6">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur mollitia ea consequuntur
@@ -186,72 +187,70 @@
 
                 <div class="typography-showcase">
                     <div class="font-family-section m-b-8">
-                        <h4 class="m-b-4">Font Family</h4>
-                        <div class="font-display">
-                            <span class="font-name">Plus Jakarta Sans</span>
-                            <p class="font-fallback">Fallbacks: Times New Roman, Times, serif</p>
-                        </div>
+                        <h4>Font used</h4>
+                        <h1>Inter</h1>
+                        <p class="font-fallback">Fallbacks: -apple-system, Arial, sans-serif</p>
                     </div>
 
-                    <div class="type-scale">
+                    <div>
                         <h4 class="m-b-4">Type Scale & Hierarchy</h4>
 
                         <div class="type-example m-b-4">
-                            <h1 class="type-sample">Heading 1</h1>
+                            <h1>Heading 1</h1>
                             <div class="type-details">
-                                <span class="type-size">4rem (64px)</span>
-                                <span class="type-weight">Variable weight</span>
-                                <span class="type-usage">Page titles</span>
+                                <h4>4rem (64px)</h4>
+                                <p>font-weight: 700</p>
+                                <p class="type-usage">Main page heading, hero section title</p>
                             </div>
                         </div>
 
                         <div class="type-example m-b-4">
-                            <h2 class="type-sample">Heading 2</h2>
+                            <h2>Heading 2</h2>
                             <div class="type-details">
-                                <span class="type-size">3rem (48px)</span>
-                                <span class="type-weight">Variable weight</span>
-                                <span class="type-usage">Section headers</span>
+                                <h4>3rem (48px)</h4>
+                                <p>font-weight: 600</p>
+                                <p class="type-usage">Main content sections within a page</p>
                             </div>
                         </div>
 
                         <div class="type-example m-b-4">
-                            <h3 class="type-sample">Heading 3</h3>
+                            <h3>Heading 3</h3>
                             <div class="type-details">
-                                <span class="type-size">1.5rem (24px)</span>
-                                <span class="type-weight">Variable weight</span>
-                                <span class="type-usage">Subsection titles</span>
+                                <h4>1.5rem (24px)</h4>
+                                <p>font-weight: 600</p>
+                                <p class="type-usage">Subsection Headings</p>
                             </div>
                         </div>
 
                         <div class="type-example m-b-4">
-                            <h4 class="type-sample">Heading 4</h4>
+                            <h4>Heading 4</h4>
                             <div class="type-details">
-                                <span class="type-size">1rem (16px)</span>
-                                <span class="type-weight">Bold</span>
-                                <span class="type-usage">Component titles</span>
+                                <h4>1rem (16px)</h4>
+                                <p class="type-weight">Bold</p>
+                                <p class="type-usage">Minor Subsections / Card Headers</p>
                             </div>
                         </div>
 
                         <div class="type-example m-b-4">
-                            <h5 class="type-sample">Heading 5</h5>
+                            <h5>Heading 5</h5>
                             <div class="type-details">
-                                <span class="type-size">0.75rem (12px)</span>
-                                <span class="type-weight">Bold</span>
-                                <span class="type-usage">Small labels</span>
+                                <h4 class="type-size">0.875rem</h4>
+                                <p class="type-weight">Bold</p>
+                                <p class="type-usage">Tiny labels, tags, overlines</p>
                             </div>
                         </div>
 
                         <div class="type-example m-b-4">
-                            <p class="type-sample">Body Text</p>
+                            <p>Body Text</p>
                             <div class="type-details">
-                                <span class="type-size">1rem (16px)</span>
-                                <span class="type-weight">Regular</span>
-                                <span class="type-usage">Main content</span>
+                                <h4 class="type-size">1rem (16px)</h4>
+                                <p class="type-weight">Regular</p>
+                                <p class="type-usage">Main content</p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </article>
+            </section>
 
             <div class="p-y-24"></div>
         </div>
