feat: UX/UI considerations in site map

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -70,13 +70,13 @@
                                         <br />
 
                                         Since this is the also the main entry point of the website, and based on the
-                                        user stories which mentioned that
-                                        messy navigational elements can be a barrier for users to access the platform, a
-                                        clear structure
-                                        and logical navigations to other pages are important. Therefore it is important
-                                        to ensure WCAG 3.2.3 is adhered in this page (And also on all other pages), so
-                                        that the users can easily navigate through the website.
-
+                                        user stories which mentioned that messy navigational elements can be a barrier
+                                        for users to access the platform, a clear structure
+                                        and logical navigations to other pages are important. Therefore several UX/UI
+                                        principles such as Gestalt Principles Figure & Ground and Gestalt Principles of
+                                        Law of Prägnanz will be heavily implemented, in order to make sure the page is
+                                        not cluttered, clean, and also seperations of different section is clearly
+                                        visible.
 
                                         <br />
                                         <br />
@@ -85,7 +85,11 @@
                                         accessible to access resource and the user stories which mentioned that
                                         simple languages and clear instructions are important, the home page will be
                                         adhering to WCAG 3.1.5 (Reading Level), so that the content is easy to read
-                                        especially for new users who have no idea about the platform.
+                                        especially for new users who have no idea about the platform. Additionally,
+                                        since potential users mentioned that contrast colors is important
+                                        to make the website more accessible, the WCAG 1.4.3 (Contrast) will also be very
+                                        much considered, especially in the landing page which might have several images
+                                        and texts.
 
 
                                     </p>
@@ -394,6 +398,16 @@
                                         and also the user that has the most reviewed and cooked attempts (Called
                                         Chef). As imagined, each of these crumblings attempts can be interacted,
                                         commented, and shared.
+
+                                        <br />
+                                        <br />
+
+                                        As described, since this page will be content heavy, Gestalt Principles of
+                                        Common
+                                        Regions will be implemented, to make sure different/same group of contents are
+                                        easily identified by the user.
+
+
                                     </p>
 
                                     <div class="accordion-item m-y-6">
@@ -565,6 +579,14 @@
 
                                         <br />
                                         <br />
+
+                                        Similiar with the CrumbsFeed Page, this page is also designed to be the Gestalt
+                                        Principles of Common Regions will be very implemented to make sure
+                                        different/same group of contents are easily identified by the user.
+
+                                        <br />
+                                        <br />
+
                                         Simliar to the Crumbs page, For first time users, a step by step
                                         guideline/tutorial will be shown to help them understand how to
                                         navigate and utilize this page.
@@ -790,6 +812,15 @@
                                         the role of Community Representative. This role has the authority to talk on the
                                         FeedCrumbs
                                         representing the community.
+
+                                        <br />
+                                        <br />
+
+                                        Furtheremore, to make sure that the communities page are easy to use and
+                                        navigate even though there are many things going on in this page, the
+                                        Gestalt Principles of Law of Prägnanz and Common Regions will be implemented in
+                                        order to make sure the layout is clean and predictable, and also different/same
+                                        group of contents are easily identified by the user.
 
                                         <br />
                                         <br />
