feat: add annotation on color scheme and typography

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -118,8 +118,10 @@
             <section class="base-card m-b-12">
                 <h2 class="m-b-6">Color Scheme</h2>
                 <p class="m-b-6">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint dignissimos ratione odio laudantium
-                    possimus accusamus mollitia tempora nulla excepturi obcaecati?
+                    Following the focus community that I chose were about the Food and Cuisines, I use the color theme
+                    of “Crumbs” (which more of the combination of brown,orange and red) to maintain brand identity.
+                    But I keep the background color and text color to be a more “neutral” color in order to maintain
+                    contrast.
                 </p>
 
                 <div class="color-palette">
@@ -181,8 +183,11 @@
             <section class="base-card m-b-12 p-b-12">
                 <h2 class="m-b-6">Typography</h2>
                 <p class="m-b-6">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur mollitia ea consequuntur
-                    temporibus dolor sunt error placeat enim. Delectus?
+                    I chose a more professional but still modern font, in order to balance out some "gamification" parts
+                    of the website. For the text sizes, I used the The Golden Ratio theory to make visual hierarchy
+                    (headings - sub headings - text and so on) just feels "right" and balanced. Also, the colors and
+                    font weights used for the texts is also considering the contrast ratio (WCAG 1.4.3) to make sure the
+                    texts and background is easily contrast enough.
                 </p>
 
                 <div class="typography-showcase">
@@ -198,7 +203,7 @@
                         <div class="type-example m-b-4">
                             <h1>Heading 1</h1>
                             <div class="type-details">
-                                <h4>4rem (64px)</h4>
+                                <h4>4rem</h4>
                                 <p>font-weight: 700</p>
                                 <p class="type-usage">Main page heading, hero section title</p>
                             </div>
@@ -207,7 +212,7 @@
                         <div class="type-example m-b-4">
                             <h2>Heading 2</h2>
                             <div class="type-details">
-                                <h4>3rem (48px)</h4>
+                                <h4>2.472rem</h4>
                                 <p>font-weight: 600</p>
                                 <p class="type-usage">Main content sections within a page</p>
                             </div>
@@ -216,7 +221,7 @@
                         <div class="type-example m-b-4">
                             <h3>Heading 3</h3>
                             <div class="type-details">
-                                <h4>1.5rem (24px)</h4>
+                                <h4>1.528rem</h4>
                                 <p>font-weight: 600</p>
                                 <p class="type-usage">Subsection Headings</p>
                             </div>
@@ -225,7 +230,7 @@
                         <div class="type-example m-b-4">
                             <h4>Heading 4</h4>
                             <div class="type-details">
-                                <h4>1rem (16px)</h4>
+                                <h4>1rem</h4>
                                 <p class="type-weight">Bold</p>
                                 <p class="type-usage">Minor Subsections / Card Headers</p>
                             </div>
