feat: add lineheight annotation

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -187,7 +187,9 @@
                     of the website. For the text sizes, I used the The Golden Ratio theory to make visual hierarchy
                     (headings - sub headings - text and so on) just feels "right" and balanced. Also, the colors and
                     font weights used for the texts is also considering the contrast ratio (WCAG 1.4.3) to make sure the
-                    texts and background is easily contrast enough.
+                    texts and background is easily contrast enough. By default, I use line-height of 1.6 to make sure
+                    the easily track one line to another while still maintaining appropiate spacing. But, for headings,
+                    I use line-height of 1.2 to make sure the headings is more compact and stands out more.
                 </p>
 
                 <div class="typography-showcase">
