feat: add new color

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -141,15 +141,24 @@
                                 <div class="color-info">
                                     <h5>Secondary</h5>
                                     <p class="color-code">#D2691E</p>
-                                    <p class="color-usage">borders, icons, secondary buttons, cards</p>
+                                    <p class="color-usage">Borders & Dividers, secondary buttons, call to action texts
+                                    </p>
                                 </div>
                             </div>
                             <div class="color-swatch">
-                                <div class="swatch accent-color"></div>
+                                <div class="swatch accent-color-text"></div>
                                 <div class="color-info">
                                     <h5>Accent</h5>
-                                    <p class="color-code">#DC143C</p>
-                                    <p class="color-usage">Links, badges, alerts, CTAs, "new" labels, achievements</p>
+                                    <p class="color-code">#A52A2A</p>
+                                    <p class="color-usage">Links, badges, alerts, CTAs</p>
+                                </div>
+                            </div>
+                            <div class="color-swatch">
+                                <div class="swatch accent-color-bg"></div>
+                                <div class="color-info">
+                                    <h5>Accent background</h5>
+                                    <p class="color-code">#FFD4B2</p>
+                                    <p class="color-usage">Subtle Highlight Backgrounds, Hovers</p>
                                 </div>
                             </div>
                         </div>
