feat: init behavioral page

--- a/work_phase_3/style_guide.html
+++ b/work_phase_3/style_guide.html
@@ -19,8 +19,8 @@
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="index.html"><span class="icon">🏚️</span></a></li>
-            <li><a href="site_map.html" aria-current="page"><span class="icon">🗺️</span></a></li>
-            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
+            <li><a href="site_map.html"><span class="icon">🗺️</span></a></li>
+            <li><a href="style_guide.html" aria-current="page"><span class="icon">🖼️</span></a></li>
             <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
             <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
         </ul>
