--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -19,8 +19,8 @@
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="index.html"><span class="icon">🏚️</span></a></li>
-            <li><a href="site_map.html" aria-current="page"><span class="icon">🗺️</span></a></li>
-            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
+            <li><a href="site_map.html"><span class="icon">🗺️</span></a></li>
+            <li><a href="style_guide.html" aria-current="page"><span class="icon">🖼️</span></a></li>
             <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
             <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
         </ul>
@@ -40,7 +40,7 @@
     <main>
         <div class="container">
             <div class="breadcrumbs-link">
-                <a href="style_guide.html">Style Guide</a> &gt; <span class="active">Visceral Design</span>
+                <a href="style_guide.html">Style Guide</a> > <span class="active">Visceral Design</span>
             </div>
 
             <header class="m-b-8">
