--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-    <link rel="stylesheet" href="css/page_css/behavioural_design.css" />
+    <link rel="stylesheet" href="css/page_css/visceral_design.css" />
 
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <title>Behavioral Design - Work Phase 3</title>
+    <title>Visceral Design - Work Phase 3</title>
 </head>
 
 <body>
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="index.html"><span class="icon">🏚️</span></a></li>
-            <li><a href="site_map.html" aria-current="page"><span class="icon">🗺️</span></a></li>
-            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
+            <li><a href="site_map.html"><span class="icon">🗺️</span></a></li>
+            <li><a href="style_guide.html" aria-current="page"><span class="icon">🖼️</span></a></li>
             <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
             <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
         </ul>
@@ -35,63 +35,108 @@
         </ul>
     </nav>
 
+
+
     <main>
         <div class="container">
-            <article class="form-section m-b-12">
-                <h2 class="m-b-6">Community Engagement Form</h2>
-                <p class="m-b-6">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perferendis, voluptas optio velit
-                    facilis modi quo, fuga corporis recusandae, expedita officiis. Cupiditate laborum delectus quia
-                    dolore ex nisi quibusdam aliquam?
+            <div class="breadcrumbs-link">
+                <a href="style_guide.html">Style Guide</a> > <span class="active">Behavorial Design</span>
+            </div>
+
+            <header class="m-b-8">
+                <h1 class="m-b-4 p-t-6">Behavioral Design</h1>
+                <h3 class="m-b-6">
+                    This is the Behavioral design aspect of the FeedCrumbs website
+                </h3>
+                <p class="m-b-8">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim corrupti laboriosam? Id temporibus
+                    quisquam dolorem quod accusamus quasi voluptates!
+                </p>
+            </header>
+
+            <section class="base-card m-b-12">
+                <h3 class="m-b-6">Wireframe Gallery</h3>
+                <p class="m-b-8">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed cupiditate doloremque minima nam
+                    expedita ab alias quasi voluptate animi accusamus?
+                    <br>
+                    <br>
+
+                    Click on the images to see detailed annotations explaining
+                    the design choices and considerations.
                 </p>
 
-                <form id="community-form" class="community-form" novalidate>
-                    <div class="form-group m-b-4">
-                        <label for="name" class="form-label">Full Name *</label>
-                        <input type="text" id="name" name="name" class="form-input" required
-                            aria-describedby="name-error">
-                        <span id="name-error" class="error-message" aria-live="polite"></span>
+                <div class="image-gallery">
+                    <div class="gallery-item">
+                        <img src="../work_phase_3/assets/home.png" alt="
+                        As planned on the sitemap, this part of screen is consisting of 3 main features, landing page, highlights, and about. Firstly, in the landing page, I used the Gestalt Principles, Law of Prägnanz. I use simple texts with buttons, basic shapes, and a simple background. To make sure I adhere to contrast minimum (WCAG 1.4.3), I do not plan on using an image for the background. I intend to use a minimum decorations to fill the white space in the landing page. This too also following the Gestalt principle of Figure and Ground, which is to make sure the main contents stand out to the background. Moving on to next section which is the highlight, I actually put it very near to to the landing page, so that the user can see the highlight from the first time when opening the page, making it easier and hopefully acts as a hook for the user. In order to make sure its not cluttered, i apply the Gestalt Principles of Common Regions. I boxed in the highlight section using border so that the separation of the contents clearer. Lastly, the about page is provided near the bottom of the page. Identical to the other sections, because there is images in this part, I will make sure to apply alt text in order to adhere WCAG 1.1.1 (alt text for non-text content). Overall, I also apply Gestalt Principles of Proximity, and Gestalt Principles of Similarity by using consistent spacing between things that are connected and non-connected, and consistent designs such for buttons, text, and colors (later on design implementation). Mobile specific: Some of the components layouts are changed (for example row become columns), in order to maintain consistent spacings and prevent cluttering. 
+
+                        " class="responsive-img">
+                        <h4 class="m-t-3">Home Page</h4>
                     </div>
 
-                    <div class="form-group m-b-4">
-                        <label for="email" class="form-label">Email Address *</label>
-                        <input type="email" id="email" name="email" class="form-input" required
-                            aria-describedby="email-error">
-                        <span id="email-error" class="error-message" aria-live="polite"></span>
+                    <div class="gallery-item">
+                        <img src="../work_phase_3/assets/home_mobile.png"
+                            alt="
+                        As planned on the sitemap, this part of screen is consisting of 3 main features, landing page, highlights, and about. Firstly, in the landing page, I used the Gestalt Principles, Law of Prägnanz. I use simple texts with buttons, basic shapes, and a simple background. To make sure I adhere to contrast minimum (WCAG 1.4.3), I do not plan on using an image for the background. I intend to use a minimum decorations to fill the white space in the landing page. This too also following the Gestalt principle of Figure and Ground, which is to make sure the main contents stand out to the background. Moving on to next section which is the highlight, I actually put it very near to to the landing page, so that the user can see the highlight from the first time when opening the page, making it easier and hopefully acts as a hook for the user. In order to make sure its not cluttered, i apply the Gestalt Principles of Common Regions. I boxed in the highlight section using border so that the separation of the contents clearer. Lastly, the about page is provided near the bottom of the page. Identical to the other sections, because there is images in this part, I will make sure to apply alt text in order to adhere WCAG 1.1.1 (alt text for non-text content). Overall, I also apply Gestalt Principles of Proximity, and Gestalt Principles of Similarity by using consistent spacing between things that are connected and non-connected, and consistent designs such for buttons, text, and colors (later on design implementation). Mobile specific: Some of the components layouts are changed (for example row become columns), in order to maintain consistent spacings and prevent cluttering. "
+                            class="responsive-img">
+                        <h4 class="m-t-3">Home Page (Mobile)</h4>
                     </div>
 
-                    <div class="form-group m-b-4">
-                        <label for="message" class="form-label">Message or Introduction</label>
-                        <textarea id="message" name="message" class="form-textarea" rows="4"
-                            placeholder="Tell us about yourself or share your thoughts..."
-                            aria-describedby="message-help"></textarea>
-                        <span id="message-help" class="form-help">Optional: Share any additional information</span>
+                    <div class="gallery-item">
+                        <img src="../work_phase_3/assets/timeline.png"
+                            alt="Due to the complexity the timeline (FeedCrumbs) page, I really make sure to pay attention to Gestalt Principles of Common Regions. The overall layout created is boxed using borders to create “zones”, in order to make sure the user can easily navigate and interact with the elements in the page. Furthemore, Gestalt Principles of Common Regions is also used to make sure the navigation placement is consistent throughout different pages, both on desktop and mobile, in order to make it more easy and “easy to remember” to be navigated by the users, Since this page is text and content heavy, several accessibility principles are implemented in this page. The most obvious one is Contrast Minimum and Resize text, this accessibility considerations is very important because the page is very wordy, therefore we have to make the user can easily read the texts, and also the page is not cluttered in case a bigger texts is needed for visually impaired users. Form and input related accessibility considerations such as Error Identification, Focus Visible, and Label & Instructions is also needed in this page, since there are several textbox and inputs in this page. This accessibility consideration is important to make sure user can easily interact with the forms and input, such as adding labels in the forms, and also error message if theres a misuse in the text box (such as message too long)."
+                            class="responsive-img">
+                        <h4 class="m-t-3">FeedCrumbs</h4>
                     </div>
 
-                    <div class="form-group m-b-6">
-                        <label for="photo" class="form-label">Photo Upload</label>
-                        <div class="file-upload-wrapper">
-                            <input type="file" id="photo" name="photo" class="form-file" accept="image/*"
-                                aria-describedby="photo-help">
-                            <label for="photo" class="file-upload-label">
-                                <span class="file-upload-text">Choose a photo</span>
-                                <span class="file-upload-button">Browse</span>
-                            </label>
-                        </div>
-                        <span id="photo-help" class="form-help">Optional: Upload an image (max 10MB)</span>
-                        <span id="photo-error" class="error-message" aria-live="polite"></span>
+                    <div class="gallery-item">
+                        <img src="../work_phase_3/assets/timeline_mobile.png"
+                            alt="Due to the complexity the timeline (FeedCrumbs) page, I really make sure to pay attention to Gestalt Principles of Common Regions. The overall layout created is boxed using borders to create “zones”, in order to make sure the user can easily navigate and interact with the elements in the page. Furthemore, Gestalt Principles of Common Regions is also used to make sure the navigation placement is consistent throughout different pages, both on desktop and mobile, in order to make it more easy and “easy to remember” to be navigated by the users, Since this page is text and content heavy, several accessibility principles are implemented in this page. The most obvious one is Contrast Minimum and Resize text, this accessibility considerations is very important because the page is very wordy, therefore we have to make the user can easily read the texts, and also the page is not cluttered in case a bigger texts is needed for visually impaired users. Form and input related accessibility considerations such as Error Identification, Focus Visible, and Label & Instructions is also needed in this page, since there are several textbox and inputs in this page. This accessibility consideration is important to make sure user can easily interact with the forms and input, such as adding labels in the forms, and also error message if theres a misuse in the text box (such as message too long)."
+                            class="responsive-img">
+                        <h4 class="m-t-3">FeedCrumbs (Mobile)</h4>
                     </div>
 
-                    <div class="form-actions">
-                        <button type="submit" class="button button-primary">Submit</button>
-                        <button type="reset" class="button button-secondary">Reset Form</button>
+                    <div class="gallery-item">
+                        <img src="../work_phase_3/assets/map.png"
+                            alt="Since the page layout is similar to the FeedCrumbs page, the UX/UI design principles and accessibility considerations is also identical. Gestalt Principles of Common Regions is implemented  to make sure similar and different sections of the page is grouped using boxes to emphasize separation of concerns. Same with FeedCrumbs, accessibility considerations such as Contrast Minimum, Resize text, Focus Visible, Error Identification and Label & Instructions is also used in this page in order to make the users can easily read, and interact with the forms and inputs in this page. The contrast minimum consideration is even more important in this page since the the main background of this page is basically a map, which may consist colorful contents (depending on the basemap and layers used by the users). To make an emphasis on this matter, texts inside the map will not only be using a contrast background, but the background will also have strong border, so users can easily identify the texts and boxes inside the map. Mobile specific: in order to not make the visuals is not cluttered, the side bar is hidden by default, and can be opened by clicking the button on the top right of the map. "
+                            class="responsive-img">
+                        <h4 class="m-t-3">CrumbsMap</h4>
                     </div>
 
-                    <div id="form-feedback" class="form-feedback" aria-live="polite"></div>
-                </form>
-            </article>
+                    <div class="gallery-item">
+                        <img src="../work_phase_3/assets/map_mobile.png"
+                            alt="Since the page layout is similar to the FeedCrumbs page, the UX/UI design principles and accessibility considerations is also identical. Gestalt Principles of Common Regions is implemented  to make sure similar and different sections of the page is grouped using boxes to emphasize separation of concerns. Same with FeedCrumbs, accessibility considerations such as Contrast Minimum, Resize text, Focus Visible, Error Identification and Label & Instructions is also used in this page in order to make the users can easily read, and interact with the forms and inputs in this page. The contrast minimum consideration is even more important in this page since the the main background of this page is basically a map, which may consist colorful contents (depending on the basemap and layers used by the users). To make an emphasis on this matter, texts inside the map will not only be using a contrast background, but the background will also have strong border, so users can easily identify the texts and boxes inside the map. Mobile specific: in order to not make the visuals is not cluttered, the side bar is hidden by default, and can be opened by clicking the button on the top right of the map. "
+                            class="responsive-img">
+                        <h4 class="m-t-3">CrumbsMap (Mobile)</h4>
+                    </div>
+
+
+                </div>
+            </section>
+
+
+
+            <div class="p-y-24"></div>
         </div>
     </main>
+
+    <div class="sidebar-overlay"></div>
+    <div class="sidebar">
+        <div class="sidebar-header">
+            <h3>Image Details</h3>
+            <button class="close-btn" aria-label="Close sidebar">&times;</button>
+        </div>
+        <div class="sidebar-content">
+            <div class="sidebar-image-wrapper">
+                <img id="sidebarImage" class="sidebar-image" src="" alt="">
+            </div>
+            <div class="sidebar-annotation">
+                <h4>Annotation</h4>
+                <p id="sidebarAnnotation"></p>
+            </div>
+        </div>
+    </div>
 
     <script type="module" src="js/behavioural_design.js"></script>
 </body>
